--- a/templates/clientes.html
+++ b/templates/clientes.html
@@ -35,18 +35,18 @@
                 <tbody id="clientTableBody">
                     {% for cliente in clientes %}
                         <tr>
-                            <td style="white-space: nowrap;">{{ cliente.Nome|default_if_none:"-" }}</td>
-                            <td style="white-space: nowrap;">{{ cliente.CPF|default_if_none:"-" }}</td>
-                            <td style="white-space: nowrap;">{{ cliente.CNPJ|default_if_none:"-" }}</td>
-                            <td style="white-space: nowrap;">{{ cliente.Endereco|default_if_none:"-" }}</td>
-                            <td class="text-center" style="white-space: nowrap;">{{ cliente.Numero|default_if_none:"-" }}</td>
-                            <td style="white-space: nowrap;">{{ cliente.Complemento|default_if_none:"-" }}</td>
-                            <td style="white-space: nowrap;">{{ cliente.Bairro|default_if_none:"-" }}</td>
-                            <td style="white-space: nowrap;">{{ cliente.Telefone|default_if_none:"-" }}</td>
-                            <td style="white-space: nowrap;">{{ cliente.Celular|default_if_none:"-" }}</td>
+                            <td style="white-space: nowrap;">{{ cliente.nome|default_if_none:"-" }}</td>
+                            <td style="white-space: nowrap;">{{ cliente.cpf|default_if_none:"-" }}</td>
+                            <td style="white-space: nowrap;">{{ cliente.cnpj|default_if_none:"-" }}</td>
+                            <td style="white-space: nowrap;">{{ cliente.endereco|default_if_none:"-" }}</td>
+                            <td class="text-center" style="white-space: nowrap;">{{ cliente.numero|default_if_none:"-" }}</td>
+                            <td style="white-space: nowrap;">{{ cliente.complemento|default_if_none:"-" }}</td>
+                            <td style="white-space: nowrap;">{{ cliente.bairro|default_if_none:"-" }}</td>
+                            <td style="white-space: nowrap;">{{ cliente.telefone|default_if_none:"-" }}</td>
+                            <td style="white-space: nowrap;">{{ cliente.celular|default_if_none:"-" }}</td>
                             <td class="text-center">
-                                {% if cliente.Whatsapp and cliente.Celular %}
-                                    <a href="https://wa.me/{{ cliente.Celular|numeric }}" target="_blank">
+                                {% if cliente.whatsapp and cliente.celular %}
+                                    <a href="https://wa.me/{{ cliente.celular|numeric }}" target="_blank">
                                         <i class="fab fa-whatsapp text-success" title="WhatsApp disponível"></i>
                                     </a>
                                 {% else %}
@@ -54,8 +54,8 @@
                                 {% endif %}
                             </td>
                             <td class="text-center">
-                                {% if cliente.Email %}
-                                    <a href="mailto:{{ cliente.Email }}">
+                                {% if cliente.email %}
+                                    <a href="mailto:{{ cliente.email }}">
                                         <i class="fas fa-envelope" title="E-mail disponível"></i>
                                     </a>
                                 {% else %}
