--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'clientes' %}">Clientes</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'lista_orcamentos' %}">Orçamentos</a>
+                </li>
             </ul>
         </div>
     </nav>
