itens do orcamento

--- a/templates/orcamentos_lista.html
+++ b/templates/orcamentos_lista.html
@@ -52,7 +52,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Lista de Orçamentos</h1>
+        <h1>Orçamentos</h1>
         <table border="1">
             <thead>
                 <tr>
