--- a/templates/orcamento_editar.html
+++ b/templates/orcamento_editar.html
@@ -47,7 +47,7 @@
                     <a href="{% url 'lista_orcamentos' %}" class="btn btn-danger">Cancelar</a>
                 </div>
                 <div class="text-center mt-3">
-                    <a href="{% url 'adicionar_item_orcamento' orcamento.id %}" class="btn btn-primary">
+                    <a href="{% url 'detalhar_orcamento' orcamento.id %}" class="btn btn-primary">
                         <i class="fas fa-plus"></i> Ítens do Orçamento
                     </a>
                 </div>
