--- a/templates/adicionar_item_orcamento.html
+++ b/templates/adicionar_item_orcamento.html
@@ -20,11 +20,14 @@
                     </div>
                 {% endif %}
                 <div class="row">
-                    <div class="col-md-6 mb-3">
-                        {{ form.idproduto|as_crispy_field }}
+                    <div class="col-md-4 mb-3">
+                        {{ form.marca|as_crispy_field }}
                     </div>
-                    <div class="col-md-6 mb-3">
-                        {{ form.idproduto2|as_crispy_field }}
+                    <div class="col-md-4 mb-3">
+                        {{ form.grupo|as_crispy_field }}
+                    </div>
+                    <div class="col-md-4 mb-3">
+                        {{ form.idproduto|as_crispy_field }}
                     </div>
                     <div class="col-md-4 mb-3">
                         {{ form.quantidade|as_crispy_field }}
@@ -49,31 +52,62 @@
         </div>
     </div>
 </div>
-<!-- Inclua o jQuery ou certifique-se de que já está incluído -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-<script>
-$(document).ready(function() {
-    // Quando idproduto mudar
-    $('#id_idproduto').change(function() {
-        if ($(this).val()) {
-            // Se idproduto tem valor, desabilita idproduto2
-            $('#id_idproduto2').val('').prop('disabled', true);
-        } else {
-            // Se idproduto está vazio, habilita idproduto2
-            $('#id_idproduto2').prop('disabled', false);
-        }
+<!-- Inclua o jQuery -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<!-- JavaScript para atualizar os comboboxes -->
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('select[name="marca"]').on('change', function () {
+            var marcaId = $(this).val();
+            if (marcaId) {
+                $.ajax({
+                    url: "{% url 'ajax_carregar_grupos' %}",
+                    data: {
+                        'marca_id': marcaId
+                    },
+                    success: function (data) {
+                        $('select[name="grupo"]').html(data);
+                        $('select[name="idproduto"]').html('<option value="">---------</option>');
+                    }
+                });
+            } else {
+                $('select[name="grupo"]').html('<option value="">---------</option>');
+                $('select[name="idproduto"]').html('<option value="">---------</option>');
+            }
+        });
+        $('select[name="grupo"]').on('change', function () {
+            var grupoId = $(this).val();
+            if (grupoId) {
+                $.ajax({
+                    url: "{% url 'ajax_carregar_produtos' %}",
+                    data: {
+                        'grupo_id': grupoId
+                    },
+                    success: function (data) {
+                        $('select[name="idproduto"]').html(data);
+                    }
+                });
+            } else {
+                $('select[name="idproduto"]').html('<option value="">---------</option>');
+            }
+        });
+        $('select[name="idproduto"]').on('change', function () {
+            var produtoId = $(this).val();
+            if (produtoId) {
+                $.ajax({
+                    url: "{% url 'ajax_obter_preco_produto' %}",
+                    data: {
+                        'produto_id': produtoId
+                    },
+                    success: function (data) {
+                        $('input[name="valor"]').val(data.preco);
+                    }
+                });
+            } else {
+                $('input[name="valor"]').val('');
+            }
+        });
     });
-    // Quando idproduto2 mudar
-    $('#id_idproduto2').change(function() {
-        if ($(this).val()) {
-            // Se idproduto2 tem valor, desabilita idproduto
-            $('#id_idproduto').val('').prop('disabled', true);
-        } else {
-            // Se idproduto2 está vazio, habilita idproduto
-            $('#id_idproduto').prop('disabled', false);
-        }
-    });
-});
 </script>
 {% endblock %}
