--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,11 @@
 
 {% block content %}
 
-    <div class="container-fluid d-flex justify-content-center align-items-center vh-100">
+<div class="container d-flex align-items-center justify-content-center" style="height: 100vh;">
+    <div class="text-center">
         <h1 class="display-4">Sistema de Administração de Orçamentos</h1>
+        <h1>A1 EXCELLENCE</h1>
     </div>
+</div>
 
 {% endblock %}
