--- a/templates/orcamento_editar.html
+++ b/templates/orcamento_editar.html
@@ -37,23 +37,32 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6 mb-3">
-                        {{ form.descricao|as_crispy_field }}
+                        <label for="{{ form.descricao.id_for_label }}">{{ form.descricao.label }}</label>
+                        {{ form.descricao|add_class:"half-height half-width" }}
                     </div>
                 </div>
-                <!-- Botão Salvar -->
+                <!-- Botões -->
                 <div class="text-center">
                     <button type="submit" class="btn btn-success">
                         <i class="fas fa-save"></i> Atualizar Orçamento
                     </button>
-                    <a href="{% url 'lista_orcamentos' %}" class="btn btn-danger">Cancelar</a>
-                </div>
-                <div class="text-center mt-3">
                     <a href="{% url 'detalhar_orcamento' orcamento.id %}" class="btn btn-primary">
                         <i class="fas fa-plus"></i> Ítens do Orçamento
                     </a>
+                    <a href="{% url 'lista_orcamentos' %}" class="btn btn-danger">Cancelar</a>
                 </div>
             </form>
         </div>
     </div>
 </div>
+
+<style>
+    .half-height {
+        height: 50%; /* Ajuste o valor conforme necessário */
+    }
+    .half-width {
+        width: 100%; /* Ajuste o valor conforme necessário */
+    }
+</style>
+
 {% endblock %}
