--- a/templates/detalhar_orcamento.html
+++ b/templates/detalhar_orcamento.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load custom_filters %}
+
 {% block content %}
 <div class="container mt-4">
     <h1 class="text-center mb-4">Orçamento Nº {{ orcamento.numero }}</h1>
@@ -23,12 +25,12 @@
         <tbody>
             {% for item in itens %}
                 <tr>
-                    <td>{{ item.idproduto }}</td>
-                    <td>{{ item.idproduto2 }}</td>
+                    <td>{{ item.idproduto|default_if_none:"-" }}</td>
+                    <td>{{ item.idproduto2|default_if_none:"-" }}</td>
                     <td>{{ item.quantidade }}</td>
-                    <td>{{ item.valor }}</td>
-                    <td>{{ item.desconto }}</td>
-                    <td>{{ item.subtotal }}</td>
+                    <td>{{ item.valor|format_currency }}</td>
+                    <td>{{ item.desconto|format_currency }}</td>
+                    <td>{{ item.subtotal|format_currency }}</td>
                     <td>
                         <!-- Botão Editar -->
                         <a href="{% url 'editar_item_orcamento' orcamento.id item.id %}" class="btn btn-sm btn-primary">
